# SoulForum-yuanxing

./: .env.example  .gitignore  Cargo.toml  history.txt  readme.md  surreal_forum.sql
.github/workflows/: ci.yml
crates/shared/: Cargo.toml
docs/: agent_api_v1.md  api.md  api_errors.md  deployment.md  error_codes.md  frontend.md  future_incompatibilities.md  openclaw_integration.md  points_system_v1.md  surreal_schema.md
docs/examples/: openclaw_tool_catalog.json
frontend/: Cargo.toml  Dioxus.toml  PROGRESS.md  history.txt
frontend/src/: app.rs  main.rs  style.rs
frontend/src/api/: client.rs  errors.rs  mod.rs
frontend/src/components/: mod.rs  nav.rs  points.rs
frontend/src/pages/: admin.rs  home.rs  login.rs  mod.rs  register.rs  topic_detail.rs
frontend/src/services/: admin.rs  attachments.rs  forum.rs  mod.rs  notifications.rs  pm.rs  points.rs
migrations/: 0001_init.sql
migrations/surreal/: 0001_init.surql  0002_points_v1.surql
src/: attachments.rs  auth.rs  db.rs  db_packages.rs  display.rs  editor.rs  language.rs  lib.rs  load.rs  main.rs  manage_bans.rs  manage_maintenance.rs  manage_membergroups.rs  manage_members.rs  manage_permissions.rs  manage_settings.rs  memberlist.rs  mentions.rs  message_index.rs  notify.rs  personal_messages.rs  points.rs  post_ops.rs  profile_actions.rs  profile_modify.rs  profile_notifications.rs  rainbow_auth.rs  repair_boards.rs  security.rs  subs_auth.rs  subs_boards.rs  subs_membergroups.rs  subs_members.rs  subs_notify.rs  surreal.rs  tasks.rs
src/agent/: auth.rs  capability.rs  handlers.rs  mod.rs  request_id.rs  response.rs  router.rs
src/api/: admin_routes.rs  attachment_routes.rs  auth.rs  auth_routes.rs  demo_routes.rs  error.rs  forum_routes.rs  guards.rs  mod.rs  notification_routes.rs  personal_message_routes.rs  points_routes.rs  (+2 more)
tests/: api_smoke.rs  limits.rs  posting.rs
yuanxing/: 01-工作台模块说明.md  02-内容治理模块说明.md  03-会员治理模块说明.md  05-权限与安全模块说明.md  06-运营与触达模块说明.md  07-平台支撑模块说明.md  08-扩展与审计模块说明.md  index.html  论坛后台左侧导航模块划分建议.md  论坛管理员后台信息架构IA.md  论坛管理员后台原型页面总目录.md  论坛管理员后台完整功能规划.md
(+161 files in other folders)
