[package]
name = "btc-forum-rust"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "frontend", "crates/shared"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"], package = "chrono" }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
regex = "1.10"
lazy_static = "1.4"
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = "9"
axum-extra = { version = "0.9", features = ["typed-header"] }
surrealdb = { version = "3.0.0", features = ["protocol-http"] }
surrealdb-types = "3.0.0"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
ammonia = "3"
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
btc-forum-shared = { path = "crates/shared" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
tower = { version = "0.5", features = ["util"] }
