[package]
name = "btc-forum-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.7", features = ["web"] }
reqwasm = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlDocument", "Storage", "FormData", "File", "FileList", "HtmlInputElement", "console"] }
js-sys = "0.3"
urlencoding = "2.1"
btc-forum-shared = { path = "../crates/shared" }
gloo-timers = { version = "0.3", features = ["futures"] }
console_error_panic_hook = "0.1"
